--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -1,7 +1,26 @@
 .Sidebar {
-   
+    z-index: 1;
     border-radius: 10px;
     color: white;
     margin-left: 10px;
     margin-top: 10px;
+}
+
+.FirstBar {
+display: flex;
+align-items: center;
+margin-top: -35em;
+gap: 20px;
+margin-left: 2em;
+}
+
+.Number {
+    display: flex;
+align-items: center;
+justify-content: center;
+    background-color: rgb(152, 240, 240);
+    color: black;
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
 }
