--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,7 @@ justify-content: center;
   height: 36.8em;
   background-color: white;
   border-radius: 20px;
+  display: flex;
+  gap: 90px;
 }
 
