Done builidng the select plan

--- a/src/Components/NavContent/SelectPlan.css
+++ b/src/Components/NavContent/SelectPlan.css
@@ -104,3 +104,21 @@ input:checked + .slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
+
+.Btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 18em;
+    margin-top: -30px;
+}
+
+.Btn > :first-child {
+    margin-left: -2em;
+    background: none;
+    font-weight: 500;
+    color: rgb(51, 51, 119);}
+
+.Btn > :nth-child(2) {
+    margin-left: 0em;
+}
