--- a/src/Components/NavContent/Info.css
+++ b/src/Components/NavContent/Info.css
@@ -1,5 +1,10 @@
 .Info {
-    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 58%;
+    transform: translate(-50%, -50%);
 }
 
 h1 {
@@ -24,7 +29,7 @@ input {
     border: 1px solid rgba(0, 0, 0, 0.3);
     margin-bottom: 15px;
     outline: none;
-    color: rgb(51, 51, 119);
+    color: rgb(0, 0, 0);
 }
 
 label {
@@ -37,8 +42,8 @@ label {
 button {
     width: 8em;
     height: 3em;
-    border-radius: 7px;
     border: none;
+    border-radius: 7px;
     color: white;
     background-color: rgb(2, 2, 53);
     cursor: pointer;
