--- a/src/Components/NavContent/ThankYou.css
+++ b/src/Components/NavContent/ThankYou.css
@@ -3,8 +3,11 @@
     flex-direction: column;
     align-items: center;
    text-align: center;
-   margin-top: 10em;
-   margin-right: 4.9em;
+   width: 30em;
+   position: absolute;
+   top: 50%;
+   left: 58%;
+   transform: translate(-50%, -50%);
 }
 
 .ThankYou > :nth-child(2){
