--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -1,3 +1,12 @@
+.Hero {
+    width: 60em;
+  height: 36.8em;
+  background-color: white;
+  border-radius: 20px;
+  display: flex;
+  gap: 90px;
+}
+
 .Sidebar {
     z-index: 1;
     border-radius: 10px;
@@ -5,3 +14,5 @@
     margin-left: 10px;
     margin-top: 10px;
 }
+
+
