--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: hsl(206, 94%, 87%);
+  min-height: 100vh;
+  display: flex;
+align-items: center;
+justify-content: center;
+  
 }
 
 code {
