--- a/src/Components/NavContent/SelectPlan.css
+++ b/src/Components/NavContent/SelectPlan.css
@@ -9,6 +9,7 @@
     color: rgb(51, 51, 119);
 }
 
+
 .PlanRoll {
     display: flex;
     gap: 20px;
@@ -19,11 +20,22 @@
 .RollOne {
     width: 7em;
     height: 9em;
-    border: 1px solid rgb(51, 51, 119);
+    border: 1px solid rgb(150, 147, 147);
     border-radius: 10px;
     color: rgb(51, 51, 119);
     padding: 15px;
+ 
 }
+
+.RollOne:hover {
+  border: 1px solid rgb(51, 51, 119);;
+}
+
+#RollNav {
+  text-decoration: none;
+  border-radius: 10px;
+}
+
 
 .RollContent {
     line-height: 6px;
@@ -38,14 +50,26 @@
 
 .RollContent > :nth-child(2)
 {
-    font-size: 15px;
-    color: rgb(171, 160, 207);
+    font-size: 13.5px;
+    color: rgb(95, 95, 97);
 }
+
+.RollContent > :nth-of-type(3)
+{
+    font-size: 13.5px;
+    color: rgb(95, 95, 97);
+}
+
 
 .RollContent > :last-child
 {
     font-size: 14px;
    
+}
+
+.YearContent > :nth-child(2) {
+  font-size: 13.5px;
+  color: rgb(15, 15, 102);
 }
 
 .Switch {
@@ -63,7 +87,7 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 47px;
+  width: 50px;
   height: 23px;
 
 }
@@ -113,15 +137,27 @@ input:checked + .slider:before {
     align-items: center;
     justify-content: center;
     gap: 18em;
-    margin-top: -30px;
+    margin-top: 50px;
 }
 
 .Btn > :first-child {
-    margin-left: -2em;
+    margin-left: 1px;
     background: none;
+    text-decoration: none;
     font-weight: 500;
     color: rgb(51, 51, 119);}
 
 .Btn > :nth-child(2) {
     margin-left: 0em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 8em;
+    height: 3em;
+    border: none;
+    border-radius: 7px;
+    color: white;
+    background-color: rgb(2, 2, 53);
+    cursor: pointer;
+  text-decoration: none;
 }
