--- a/src/Components/NavContent/PickAdd.css
+++ b/src/Components/NavContent/PickAdd.css
@@ -56,7 +56,8 @@ color:  rgb(51, 51, 119);
 }
 
 .Amount {
-    color:  rgb(51, 51, 119);
+    font-size: 14px;
+    color:  rgb(23, 23, 118);
 }
 
 .Btn > :first-child {
