--- a/src/Components/NavContent/SelectPlan.css
+++ b/src/Components/NavContent/SelectPlan.css
@@ -136,7 +136,8 @@ input:checked + .slider:before {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 18em;
+    gap: 19em;
+    margin-left: 10px;
     margin-top: 50px;
 }
 
