--- a/src/Components/NavContent/Info.css
+++ b/src/Components/NavContent/Info.css
@@ -54,3 +54,9 @@ label {
     margin-left: 28.1em;
   text-decoration: none;
 }
+
+.Error {
+    color: red;
+    margin-top: 6px;
+    font-size: 15px;
+}
