--- a/src/Components/NavContent/PickAdd.css
+++ b/src/Components/NavContent/PickAdd.css
@@ -18,12 +18,15 @@
     gap: 4em;
     width: 27em;
     height: 2.2em;
-    border: 1px solid rgb(51, 51, 119);
+   
     padding: 20px;
     border-radius: 10px;
     margin-top: 16px;
 }
 
+.Pick:hover {
+    border: 1px solid rgba(51, 51, 119, 0.4);
+}
 
 
 
@@ -62,4 +65,17 @@ color:  rgb(51, 51, 119);
 
 .Btn > :first-child {
     font-weight: 600;
+}
+
+.Picked {
+    display: flex;
+    align-items: center;
+    gap: 4em;
+    width: 27em;
+    height: 2.2em;
+    border: none;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 16px;
+    background-color: rgb(234, 232, 232);
 }
