--- a/src/Components/NavContent/SelectPlan.css
+++ b/src/Components/NavContent/SelectPlan.css
@@ -24,11 +24,43 @@
     border-radius: 10px;
     color: rgb(51, 51, 119);
     padding: 15px;
+
  
 }
 
+.RollOnclick {
+  background-color: rgb(234, 232, 232);
+  width: 7em;
+    height: 9em;
+    border: 1px solid rgb(51, 51, 119);
+    border-radius: 10px;
+    color: rgb(51, 51, 119);
+    padding: 15px;
+ 
+}
+
+
+.PlanCheckbox {
+  width: 10em;
+  height: 13em;
+ margin-top: -1em;
+ margin-left: -12px;
+ position: relative;
+ z-index: 1;
+ opacity:   0;
+
+ 
+}
+
+.Plans {
+  margin-top: -11em;
+
+ 
+}
+
+
 .RollOne:hover {
-  border: 1px solid rgb(51, 51, 119);;
+  border: 1px solid rgb(51, 51, 119);
 }
 
 #RollNav {
